# codex-shim

./: .gitignore  Cargo.toml  Dockerfile  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml  sync-codex-base-instructions.yml
crates/e2e-codex/: Cargo.toml
crates/e2e-codex/fixtures/: keys.example.toml
crates/e2e-codex/fixtures/prompts/: file_read_tool.txt  no_tool.txt
crates/e2e-codex/src/: lib.rs  mock_upstream.rs
crates/e2e-codex/tests/: codex_live.rs  codex_mock.rs
crates/mapper/: Cargo.toml
crates/mapper/src/: apply_patch_tool.rs  chat_tool_context.rs  custom_tools.rs  error_mapper.rs  input_mapper.rs  lib.rs  multimodal_mapper.rs  reasoning_mapper.rs  response_mapper.rs  sse_mapper.rs  structured_output_mapper.rs  tool_call_normalizer.rs  tool_mapper.rs
crates/mapper/tests/: mapper_tests.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: canonical.rs  chat.rs  common.rs  error.rs  lib.rs  models.rs  provider_caps.rs  responses.rs  sse.rs
crates/protocol/src/prompts/base_instructions/: default.md
crates/protocol/tests/: canonical_tests.rs  roundtrip.rs
crates/providers/: Cargo.toml
crates/providers/src/: deepseek.rs  generic.rs  lib.rs  passthrough.rs  profile_meta.rs  sglang.rs  vllm.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  codex_integration.rs  config.rs  lib.rs  main.rs  provider_profile_config.rs  responses_canonicalizer.rs  runtime_metrics.rs  sse_writer.rs  store.rs  upstream.rs
crates/server/src/routes/: healthz.rs  mod.rs  models.rs  responses.rs  unsupported.rs
crates/server/tests/: e2e_tests.rs  example_configs.rs  provider_docs.rs
crates/wasm-core/: Cargo.toml
crates/wasm-core/src/: lib.rs
docs/: cli.md  codex-tool-metadata.md  configuration.md  desktop.md  e2e.md  provider-compatibility.md  release-notes-v0.6.0.md
examples/: all-options.yaml
examples/alibaba-chat/: config.yaml
examples/alibaba-responses/: config.yaml
examples/bedrock-chat/: config.yaml
examples/bedrock-responses/: config.yaml
examples/codex-config/: config.toml
examples/deepseek/: config.yaml  deepseek-models.json
examples/deepseek-chat/: config.yaml
examples/fireworks-chat/: config.yaml
examples/fireworks-responses/: config.yaml
examples/gemini-chat/: config.yaml
examples/generic-openai-chat/: config.yaml
examples/groq-chat/: config.yaml
examples/llamacpp-chat/: config.yaml
examples/llamacpp-responses/: config.yaml
examples/minimax-chat/: config.yaml
examples/moonshot-chat/: config.yaml
examples/ollama-chat/: config.yaml
examples/ollama-responses/: config.yaml
examples/openrouter-chat/: config.yaml
examples/openrouter-responses/: config.yaml
examples/sglang-chat/: config.yaml
examples/together-chat/: config.yaml
examples/vertex-chat/: config.yaml
examples/vllm-chat/: config.yaml
examples/vllm-responses/: config.yaml
examples/xai-chat/: config.yaml
examples/xai-responses/: config.yaml
examples/zai-chat/: config.yaml
gui/: README.md
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/ui/: app.js  index.html  styles.css
scripts/: package_release.py  sync_codex_base_instructions.py
