[workspace]
resolver = "2"
members = [
  "crates/protocol",
  "crates/mapper",
  "crates/providers",
  "crates/server",
  "crates/wasm-core",
  "crates/e2e-codex",
]

# Default members for `cargo test` / `cargo build` at workspace root.
# e2e-codex is excluded because it spawns subprocesses and has different
# runtime requirements than the core crates.
default-members = [
  "crates/protocol",
  "crates/mapper",
  "crates/providers",
  "crates/server",
  "crates/wasm-core",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2", "system-proxy"] }
clap = { version = "4", features = ["derive", "env"] }
serde_yaml = "0.9"
anyhow = "1"
eventsource-stream = "0.2"
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
