[package]
name = "codex-shim"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codex-shim"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
mapper = { path = "../mapper" }
providers = { path = "../providers" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
eventsource-stream.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
toml_edit = "0.22"
inquire = "0.7"
rusqlite = { version = "0.33", features = ["bundled"], optional = true }

[features]
sqlite = ["rusqlite"]
