[package]
name = "codex-shim-gui"
version = "0.3.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
codex-shim = { path = "../../crates/server" }
protocol = { path = "../../crates/protocol" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[build-dependencies]
tauri-build = { version = "2" }
